[JDK19]Update VaList test cases for Linux/s390x
The changes update a few VaList test cases specific
to Linux/s390x which also apply to other platforms.

Signed-off-by: Cheng Jin <jincheng@ca.ibm.com>